New & Changed Features for OrangeHRM ver 4.9
    New Feature
    -----------
    Corporate Branding
      - It allows admin to customize the OrangeHRM system with their organization's colors, company logo, and banners.
      - Users who have purchased the addon will be able to use it without expiration upon upgrading with 4.9 system.
    Environment Compatability with Maria DB 10.6

New & Changed Features for OrangeHRM ver 4.8
    New Feature
    -----------
    Help portal integration: Employees and admin can access the user guide via the system.

    Bug Fixes
    ---------
    Security fix [CVE-2021-28051]

New & Changed Features for OrangeHRM ver 4.7
    New Features
    ------------
    OrangeHRM Open Source Mobile App Version 2.0 is released with the following features.
    - Employees to Punch In/Out the attendance records
    - Employees to view their attendance records summary and details
    - Admin / Supervisor to view their employees' attendance summary and details

New & Changed Features for OrangeHRM ver 4.6.0.1
    Bug Fixes
    ---------
    Security fix [CVE-2020-29437]

New & Changed Features for OrangeHRM ver 4.6
    New Features
    ------------
    Admin can create the language pack and translate the words to reflect in OrangeHRM System.
    - Admin creates a new language package.
    - Admin filter the words by the module to translate the words in those modules only.
    - Admin exports the translated language pack to share with the OrangeHRM community.

    Bug Fixes
    ------------
    Code improvements to enhance the security of the application.

New & Changed Features for OrangeHRM ver 4.5
    New Features
    ------------
    Mobile app 1.0 version release with leave features
    - Request for leave/time off on the go
    - Check available balances of your leave entitlements before applying for a leave.
    - Supervisors can approve leave requests of their employees