@@ -208,70 +208,4 @@ class addThemeAction extends sfAction
         }
         return $this->themeService;
     }
-    /**
-     * @throws CoreServiceException
-     * @throws sfStopException
-     */
-    public function preExecute()
-    {
-        $licenseEnforced = $this->isLicenseEnforced();
-        if ($licenseEnforced) {
-            $properties = array_map(function($property) {
-                return $property['value'];
-            }, ioncube_license_properties());
-            $addonName = $properties['addonName'];
-            $instanceId = $properties['instanceIdentifier'];
-            if ($addonName !== 'Corporate-Branding-opensource' || $instanceId !== $this->getConfigService()->getInstanceIdentifier()) {
-                $this->getUser()->setFlash(displayMessageAction::MESSAGE_HEADING, __('Incorrect license for Corporate Branding addon'), false);
-                $this->getUser()->setFlash('error.nofade', __('Please update the correct license for Corporate Branding addon.'), false);
-                $this->forward('core', 'displayMessage');
-            }
-
-            if ($this->hasLicenseExpired()) {
-                // block access
-                $this->getUser()->setFlash(displayMessageAction::MESSAGE_HEADING, __('License Expired.'), false);
-                $this->getUser()->setFlash('error.nofade', __('This addon license is expired, Please request through the marketplace to renew.'), false);
-                $this->forward('core', 'displayMessage');
-            }
-        }
-    }
-
-    /**
-     * @return bool
-     */
-    protected function hasLicenseExpired()
-    {
-        if (!ioncube_license_has_expired()) {
-            return false;
-        }
-        $fileInfo = ioncube_file_info();
-        $expiry = $fileInfo['FILE_EXPIRY'];
-        $graceDays = $this->getLicenseExpiryGracePeriod();
-        $endOfGracePeriod = strtotime("+{$graceDays} day", $expiry);
-        return time() > $endOfGracePeriod;
-    }
-
-    /**
-     * @return bool
-     */
-    public function isLicenseEnforced()
-    {
-        return function_exists('ioncube_file_is_encoded') && ioncube_file_is_encoded();
-    }
-
-    /**
-     * @return int
-     */
-    protected function getLicenseExpiryGracePeriod()
-    {
-        $gracePeriod = 0;
-        $properties = array_map(function($property) {
-            return $property['value'];
-        }, ioncube_license_properties());
-        if (isset($properties['gracePeriod'])) {
-            $gracePeriod = $properties['gracePeriod'];
-        }
-        return $gracePeriod;
-    }
-
 }
