@@ -1,18 +1,0 @@
-# OrangeHRM Corporate Branding plugin
-
-## Current
-
-- OHRM-922:Add localization language strings
-
-## v1.1
-
-- General bug fixes
-
-## v1.0
-
-Main functionalities
-
-- Change primary, secondary color
-- Change button primary, secondary color
-- Change banner
-- Change logo
